--- a/Example/AiLevelTestKit/Info.plist
+++ b/Example/AiLevelTestKit/Info.plist
@@ -26,6 +26,8 @@
 	<string>Access to Mic for STT</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
 	<string>Access to Speech Recogniser</string>
+	<key>UIFileSharingEnabled</key>
+	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
